--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_it.properties
@@ -1,30 +1,30 @@
-COULD\ NOT\ REVERT\ VERSION=\ N \ CHANGEMENTS \ MADE=Impossibile ripristinare la versione= nessuna modifica effettuata
+COULD\ NOT\ REVERT\ VERSION=Impossibile ripristinare la versione, nessuna modifica effettuata
 
-INSERT\ MANUAL\ RESOURCE\ LOCATION=Inserisci individuazione manuale delle risorse=
+INSERT\ MANUAL\ RESOURCE\ LOCATION=
 
-RE-IMPORT\ THIS\ BRANCH=Importa di nuovo questo ramo=
+RE-IMPORT\ THIS\ BRANCH=Importa di nuovo questo ramo
 
-RE-IMPORT\ THIS\ SESSION=Importa di nuovo questa sessione=
+RE-IMPORT\ THIS\ SESSION=
 
-IMPORT\ BRANCH=Importa ramo=
+IMPORT\ BRANCH=Importa ramo
 
-IMPORT\ CSV=Importa CSV=
+IMPORT\ CSV=Importa CSV
 
-EXPORT=Esporta=
+EXPORT=Esporta
 
-REMOVE\ LINK\ TO\ DIRECTORY=Rimuovi link a directory=
+REMOVE\ LINK\ TO\ DIRECTORY=Rimuovi link alla cartella
 
 SHOW\ HIDDEN\ FILES=Mostra file nascosti
 
 ADD\ WORKING\ DIRECTORY=Aggiungi cartella di lavoro
 
-REMOVE\ REMOTE\ LOCATION=Rimuovi posizione remota
+REMOVE\ REMOTE\ LOCATION=Rimuovi postazione remota
 
-ADD\ DEFAULT\ LOCATIONS=Aggiungi posizioni di default
+ADD\ DEFAULT\ LOCATIONS=Aggiungi postazioni di default
 
-THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le posizioni di default esistono gi\u00e0 e non verranno aggiunte di nuovo
+THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Le postazioni di default esistono gi\u00e0 e non verranno aggiunte di nuovo
 
-ADD\ DEFAULT\ REMOTE\ LOCATIONS=Aggiungi posizioni remote di default
+ADD\ DEFAULT\ REMOTE\ LOCATIONS=Aggiungi postazioni remote di default
 
 ADD\ TO\ TREE\ ROOT=Aggiungi alla radice dell'albero
 
@@ -86,7 +86,7 @@ REVERT\ SELECTED\ FIELDS=Ripristina i file selezionati
 
 DELETE\ FIELD=Elimina campo
 
-ERROR\ DELETING\ FIELDS=Errore durante l'eliminiazione dei campi
+ERROR\ DELETING\ FIELDS=Errore durante l'eliminazione dei campi
 
 DELETE\ MULTIFIELD=Elimina campi=
 
@@ -100,95 +100,95 @@ DELETE\ {0}=Elimina {0}
 
 DELETE\ ATTRIBUTE\ {0}=Elimina attributo {0}
 
-ARBIL=Arbil=
+ARBIL=Arbil
 
 SAVE\ CHANGES\ BEFORE\ EXITING?=Salvare le modifiche prima di uscire?
 
-SHORT\ CUT\ KEYS=Touches de raccourci=
+SHORT\ CUT\ KEYS=Tasti di scelta rapida
 
 NO\ UPDATES\ FOUND=Nessun aggiornamento trovato
 
-CHECK\ FOR\ UPDATES=Verifica aggiornamenti=
+CHECK\ FOR\ UPDATES=Verifica aggiornamenti
 
-VIEW\ ERROR\ LOG=Vedi registro errori
+VIEW\ ERROR\ LOG=Visualizza registro errori
 
 ARBIL\ FORUM\ (WEBSITE)=Forum (sito Web)
 
 YES=s\u00ec
 
-RUN\ SETUP\ WIZARD=Ex\u00c3\u00a9cuter l\'Assistant Configuration
+RUN\ SETUP\ WIZARD=Esegui impostazione guidata
 
-ABOUT=Sur
+ABOUT=Arbil
 
 HELP=Guida
 
-CLOSE\ WINDOWS=Chiudi finestra
+CLOSE\ WINDOWS=Chiudi finestre
 
 CLOSE\ ALL\ WINDOWS?=Chiudere tutte le finestre?
 
 CLOSE\ ALL\ WINDOWS=Chiudi tutte le finestre
 
-RESET\ WINDOWS=Reset Windows
+RESET\ WINDOWS=Reimpostare finestre
 
-RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=R\u00c3\u00a9initialiser toutes les fen\u00c3\u00a9tres \u00c3\u00a9 la taille et l\'emplacement par d\u00c3\u00a9faut?
+RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Reimpostare misura e postazione di default di tutte le finestre?
 
-RESET\ WINDOW\ LOCATIONS=R\u00c3\u00a9initialiser emplacement des fen\u00c3\u00a9tres
+RESET\ WINDOW\ LOCATIONS=Reimposta postazione finestre
 
 WINDOW=Window
 
-PLUGINLIST\ NOT\ FOUND=Lista di plugin non trovata
+PLUGINLIST\ NOT\ FOUND=Elenco dei plugin non trovato
 
 PLUGIN\ ERROR=Errore di plugin
 
-COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Impossibile caricare il plugin: {0} \ \ n
+COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Impossibile caricare il plugin: {0}
 
 EDIT\ COLUMN\ VIEWS=Modifica visualizzazione colonne
 
 COLUMN\ VIEW\ FOR\ NEW\ TABLES=Visualizzazione a colonne per nuove tabelle
 
-SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua nel nome della colonna
+SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Mostra lingua insieme al nome della colonna
 
-TRACK\ TABLE\ SELECTION\ IN\ TREE=Suivre le tableau de s\u00c3\u00a9lection dans l\'arbre
+TRACK\ TABLE\ SELECTION\ IN\ TREE=Segui selezione tabella su albero
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.="Cette option v\u00c3\u00a9rifie tous les fichiers de m\u00c3\u00a9tadonn\u00c3\u00a9es locaux pour la conformit\u00c3\u00a9 \u00c3\u00a9 chaque fois qu\'ils sont charg\u00c3\u00a9s XML. Si le fichier de m\u00c3\u00a9tadonn\u00c3\u00a9es ne valide pas par rapport au sch\u00c3\u00a9ma= il sera soulign\u00c3\u00a9 en rouge dans l\'arbre."
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.=Questa opzione controlla che tutti i file di metadati locali siano compatibili con il formato XML ogni volta che vengono caricati. Se il file di metadati non viene convalidato secondo lo schema, viene evidenziato di rosso sull'albero.
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Toujours v\u00c3\u00a9rifier les fichiers de m\u00c3\u00a9tadonn\u00c3\u00a9es locaux pour la conformit\u00c3\u00a9 XML
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Controlla sempre conpatibilit\u00e0 dei file di metadati locali con il formato XML 
 
-THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=La modification du param\u00c3\u00a9tre sera effective Lorsque Arbil est red\u00c3\u00a9marr\u00c3\u00a9.
+THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=Le modifiche alle impostazioni verranno eseguite dopo il riavvio di Arbil
 
-THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHOWS\ ICONS\ ACCORDINGLY.=Cette option v\u00c3\u00a9rifie les autorisations du serveur de ressources distantes et les ic\u00c3\u00a9nes des spectacles en cons\u00c3\u00a9quence.
+THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHOWS\ ICONS\ ACCORDINGLY.=Questa opzione verifica le autorizzazioni del server per le risorse remote e mostra le icone corrispondenti.
 
-CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=V\u00c3\u00a9rifiez les autorisations pour les ressources distantes
+CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=Verifica autorizzazioni per risorse remote
 
-WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Lorsque vous ajoutez une nouvelle ressource pour une session cette option permet de copier le fichier dans le cache local plut\u00c3\u00a9t que d\'associer \u00c3\u00a9 son emplacement actuel. Cette option peut faire une diff\u00c3\u00a9rence \u00c3\u00a9 consid\u00c3\u00a9rer l\'utilisation du disque amor\u00c3\u00a9able si vous manipulez des fichiers volumineux.
+WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Quando si aggiunge una risorsa a una sessione il file viene copiato nella cache locale e non viene creato nessun collegamento alla sua postazione corrente. Questa opzione pu\u00f2 nettamente migliorare l'uso del disco se si usano file di grande formato.
 
-COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copiez nouvelle ressource dans le cache
+COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copia nuove risorse nella cache 
 
-CHECK\ FOR\ NEW\ VERSION\ ON\ START=V\u00c3\u00a9rifiez la nouvelle version au d\u00c3\u00a9marrage
+CHECK\ FOR\ NEW\ VERSION\ ON\ START=
 
-SHOW\ STATUS\ BAR=Afficher la barre d\'\u00c3\u00a9tat
+SHOW\ STATUS\ BAR=Mostra barra di stato
 
-SHOW\ SELECTION\ PREVIEW=Afficher l\'aper\u00c3\u00a9u de s\u00c3\u00a9lection
+SHOW\ SELECTION\ PREVIEW=Mostra anteprima selezione
 
-SAVE\ WINDOWS\ ON\ EXIT=\u00c3\u00a9conomisez sur Quitter Windows
+SAVE\ WINDOWS\ ON\ EXIT=
 
-RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Vocabulaires CurrentVersion Re-t\u00c3\u00a9l\u00c3\u00a9charger
+RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Scarica di nuovo vocabolari correnti
 
-EDIT\ IMDI\ LANGUAGE\ LIST...=Modifica lista lingue IMDI...
+EDIT\ IMDI\ LANGUAGE\ LIST...=Modifica elenco lingue IMDI...
 
-MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY=D\u00c3\u00a9placez R\u00c3\u00a9pertoire local de stockage Corpus
+MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY=Sposta cartella di archiviazione del corpus locale...
 
-MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY...=D\u00c3\u00a9placez R\u00c3\u00a9pertoire local de stockage Corpus ...
+MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY...=Sposta cartella di archiviazione del corpus locale...
 
-LOCAL\ CORPUS\ STORAGE\ DIRECTORY=R\u00c3\u00a9pertoire de Corpus stockage local
+LOCAL\ CORPUS\ STORAGE\ DIRECTORY=Cartella di archiviazione del corpus locale
 
-TEMPLATES\ &\ PROFILES...=Mod\u00c3\u00a9les et profils ...
+TEMPLATES\ &\ PROFILES...=Modelli e profili...
 
 OPTIONS=Opzioni
 
 REDO=Ripeti
 
-FIND/REPLACE=Rechercher / Remplacer
+FIND/REPLACE=Trova/Sostituisci
 
 UNDO=Annulla
 
@@ -198,13 +198,13 @@ COPY=Copia
 
 EDIT=Modifica
 
-INVALID\ LOGOUT\ URL\:\ {0}=Url di disconnessione invalido: \ \ n {0}
+INVALID\ LOGOUT\ URL\:\ {0}=URL di logout non valido:\n{0}
 
-LOGOUTURL=Url di disconnessione
+LOGOUTURL=URL di logout
 
-LOG\ OUT\ ({0})=Disconnessione ({0})
+LOG\ OUT\ ({0})=Logout ({0})
 
-UNKNOWN\ USER=Utente sconosciuto
+UNKNOWN\ USER=utente sconosciuto
 
 USERNAME=Nome utente
 
@@ -220,48 +220,56 @@ SAVE\ CHANGES=Salva modifiche
 
 FILE=File
 
-PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.="Erreur d\'analyse= tout en essayant de lire le syst\u00c3\u00a9me de l\'aide! Consultez le journal des erreurs pour plus de d\u00c3\u00a9tails."
+PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Errore del parser durante la lettura del sistema di Guida! Vedi registro errori per ulteriori dettagli. 
 
 ERROR=Errore
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=I / O erreur en essayant de lire le syst\u00c3\u00a9me d\'aide! Consultez le journal des erreurs pour plus de d\u00c3\u00a9tails.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=I/O errore durante la lettura del sistema di Guida! Vedi registro errori per ulteriori dettagli.
 
-ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar n\u00c3\u00a9cessite ArbilWindowManager. Trouv\u00c3\u00a9 {0}
+ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=
 
-ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=ArbilMenuBar n\u00c3\u00a9cessite ArbilTreeHelper. Trouv\u00c3\u00a9 {0}
+ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=
 
 EXPORT\ FAILED=Esportazione non riuscita
 
-EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Exporter au format HTML \u00c3\u00a9chou\u00c3\u00a9. V\u00c3\u00a9rifiez le journal des erreurs pour plus de d\u00c3\u00a9tails.
+EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Esportazione in HTML non riuscita. Vedi registro errori per ulteriori dettagli. 
 
-EXPORT\ IMDI\ TO\ HTML=IMDI Exporter au format HTML
+EXPORT\ IMDI\ TO\ HTML=Esporta IMDI in HTML
 
-OPEN\ IMDI\ FORMATTED=Ouvrir IMDI __Format\u00c3\u00a9
+OPEN\ IMDI\ FORMATTED=Apri IMDI formattato
 
-VIEW\ IMDI\ FORMATTED=Voir IMDI __Format\u00c3\u00a9
+VIEW\ IMDI\ FORMATTED=Visualizza IMDI formattato
 
-VIEW\ XML=Vedi formato XML
+VIEW\ XML=Visualizza formato XML
 
-OPEN\ IN\ EXTERNAL\ APPLICATION=Apri in applicazione esterna
+OPEN\ IN\ EXTERNAL\ APPLICATION=Apri con applicazione esterna
 
-OVERRIDE\ TYPE\ CHECKER\ DECISION=Remplacer D\u00c3\u00a9cision Type Checker
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Ignora type checking
 
-SAVE\ CHANGES\ TO\ DISK=Enregistrer les modifications au disque
+SAVE\ CHANGES\ TO\ DISK=Salva modifiche su disco
 
-SELECT\ RESOURCE\ FILE=S\u00c3\u00a9lectionnez Fichier de ressources
+SELECT\ RESOURCE\ FILE=Seleziona file di risorse
 
-BROWSE\ FOR\ RESOURCE\ FILE=Parcourir pour le fichier de ressources
-ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)="\u00c3\u00a9 propos de remplacer toutes les valeurs dans la colonne \ \ ""{0} \ \"" \ \ Nwith la valeur \ \ ""{1} \ \"" \ \ n (valeurs> <Plusieurs ne sera pas affectedness)"
-LOGOUT\ ERROR=Errore durante il log out
+BROWSE\ FOR\ RESOURCE\ FILE=Sfoglia file di risorse
+ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=L'applicazione sostituir\u00e0 tutti i valori della colonna "{0}"\ncon il valore "{1}"\n(i <valori multipli> non subiranno modifiche)
+LOGOUT\ ERROR=Errore durante il logout
 IMPORT/EXPORT\ FAVOURITES=Importa/Esporta preferiti
 GROUP\ FAVOURITES\ BY\ TYPE=Raggruppa preferiti secondo tipologia
 EDIT\ THIS\ COLUMN\ VIEW=Modifica visualizzazione colonna
 LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limita visualizzazione a colonne correnti 
-COLUMN\ VIEW\ FOR\ THIS\ TABLE=Vista a colonne per questa tabella
+COLUMN\ VIEW\ FOR\ THIS\ TABLE=Visualizzazione a colonne per questa tabella
 COPY\ TABLE\ FOR\ WEBSITE=Copia tabella per sito web
 FIXED\ COLUMN\ SIZE=Misura delle colonne fissa
 DELETE\ FIELD\ FROM\ ALL\ NODES=Elimina campo da tutti i nodi
 THIS\ COLUMN=Questa colonna ({0})
 ALL\ COLUMNS=Tutte le colonne
 HIDE\ COLUMN=Nascondi colonna
-SAVE\ CURRENT\ COLUMN\ VIEW=Salva corrente visualizzazione colonne 
+SAVE\ CURRENT\ COLUMN\ VIEW=Salva visualizzazione colonne corrente
+COULD\ NOT\ REVERT\ VERSION,\ NO\ CHANGES\ MADE=
+FORCE\ TYPE\ CHECKING=Forza verifica tipologia
+MAKE\ COLUMN\ FIT\ CONTENTS=Adatta colonna al contenuto
+MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Adatta tutte le colonne al contenuto
+MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Adatta tutte le colonne alla misura "{0}"
+NO\ UPDATES\ FOUND,\ CURRENT\ VERSION\ IS\ {0}=Nessun aggiornamento trovato, la versione attuale \u00e8 {0}
+DELETE\ ATTRIBUTE\ {0}\ X\ {1}=Elimina {1} attributo "{0}" 
+DELETE\ {0}\ X\ {1}=Elimina {1} campo "{0}"
